--- a/doc/header.tex
+++ b/doc/header.tex
@@ -8,159 +8,13 @@
 % \usepackage{multirow}
 \usepackage{textcomp}
 \usepackage[table]{xcolor}
+\usepackage[pdfstartview=FitH]{hyperref}
 
-\usepackage[francais,english]{babel}
-\usepackage{fullpage}
-%\usepackage{ral}
 \usepackage{amsmath}
 \usepackage{tikz}
 \usepackage{pgfplots}
 %\usetikzlibrary{external}
 \usetikzlibrary{patterns}
 \usetikzlibrary{calc}
-%\tikzset{external/force remake}
-%\tikzexternalize % activate!
-\usepackage{algorithm,algpseudocode}
-\usepackage{color}
-\usepackage{multirow}
-\usepackage{multicol}
-\usepackage{siunitx}
-\usepackage{pgf}
-\usepackage{booktabs}
-\usepackage{graphicx}
-\usepackage{caption}
-\usepackage{subfigure}
-\usepackage{tabularx}
-\renewcommand{\algorithmicrequire}{\textbf{Input:}}
-\renewcommand{\algorithmicensure}{\textbf{Output:}}
-
-\newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
-\definecolor{greenish}{RGB}{166,184,84}
-\definecolor{reddish}{HTML}{FC8D59}
-\definecolor{blueish}{HTML}{67A9CF}
-
-\newcommand{\convexpath}[2]{
-[   
-    create hullnodes/.code={
-        \global\edef\namelist{#1}
-        \foreach [count=\counter] \nodename in \namelist {
-            \global\edef\numberofnodes{\counter}
-            \node at (\nodename) [draw=none,name=hullnode\counter] {};
-        }
-        \node at (hullnode\numberofnodes) [name=hullnode0,draw=none] {};
-        \pgfmathtruncatemacro\lastnumber{\numberofnodes+1}
-        \node at (hullnode1) [name=hullnode\lastnumber,draw=none] {};
-    },
-    create hullnodes
-]
-($(hullnode1)!#2!-90:(hullnode0)$)
-\foreach [
-    evaluate=\currentnode as \previousnode using \currentnode-1,
-    evaluate=\currentnode as \nextnode using \currentnode+1
-    ] \currentnode in {1,...,\numberofnodes} {
--- ($(hullnode\currentnode)!#2!-90:(hullnode\previousnode)$)
-  let \p1 = ($(hullnode\currentnode)!#2!-90:(hullnode\previousnode) - (hullnode\currentnode)$),
-    \n1 = {atan2(\x1,\y1)},
-    \p2 = ($(hullnode\currentnode)!#2!90:(hullnode\nextnode) - (hullnode\currentnode)$),
-    \n2 = {atan2(\x2,\y2)},
-    \n{delta} = {-Mod(\n1-\n2,360)}
-  in 
-    {arc [start angle=\n1, delta angle=\n{delta}, radius=#2]}
-}
--- cycle
-}
-
-\makeatletter
-\pgfkeys{%
-  /tikz/on layer/.code={
-    \def\tikz@path@do@at@end{\endpgfonlayer\endgroup\tikz@path@do@at@end}%
-    \pgfonlayer{#1}\begingroup%
-  }%
-}
-\makeatother
-\pgfdeclarelayer{wayback}
-\pgfdeclarelayer{back}
-\pgfdeclarelayer{front}
-\pgfsetlayers{wayback,back,main,front}
-
-% consistent thousands separator
-\sisetup{
-    group-digits=true,
-    group-separator={,},
-    group-four-digits=true
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%     Matrices        %%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\Abm}{{ \bar{A}}}
-\newcommand{\Ahm}{\mbox{$ {\widehat{A}}$}}
-\newcommand{\Atm}{{ \widetilde{A}}}
-\newcommand{\Ehm}{\mbox{$ {\widehat{E}}$}}
-\newcommand{\Etm}{{ \widetilde{E}}}
-\newcommand{\Hhm}{\mbox{$ {\widehat{H}}$}}
-\newcommand{\Qtm}{{ \widetilde{Q}}}
-\newcommand{\SIm}{\mbox{\boldmath $\Sigma$}}
-\newcommand{\Stm}{{ \widetilde{S}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%      Vectors        %%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\bhv}{\mbox{$ {\hat  {b}}$}}
-\newcommand{\fhv}{\mbox{$ {\hat  {f}}$}}
-\newcommand{\ftv}{\mbox{$ {\tilde{f}}$}}
-\newcommand{\htv}{{ \tilde{h}}}
-\newcommand{\khv}{\mbox{$ {\hat  {k}}$}}
-\newcommand{\phv}{\mbox{$ {\hat  {p}}$}}
-\newcommand{\qhv}{\mbox{$ {\hat  {q}}$}}
-\newcommand{\rhv}{\mbox{$ {\hat  {r}}$}}
-\newcommand{\xhv}{\mbox{$ {\hat  {x}}$}}
-\newcommand{\xtv}{\mbox{$ {\tilde{x}}$}}
-
-\newcommand{\BSm}   {\begin{bmatrix} B  &  S \end{bmatrix}}
-\newcommand{\ACm}   {\begin{bmatrix} A  &  C \end{bmatrix}}
-\newcommand{\ACBSm} {\begin{bmatrix} A  &  C  \\  B  &  S \end{bmatrix}}
-\newcommand{\AugA}  {\begin{bmatrix} I  &  A_i^T  \\  A_i  &  0 \end{bmatrix}}
-\newcommand{\xyv}   {\begin{bmatrix} x  \\  y \end{bmatrix}}
-\newcommand{\bfv}   {\begin{bmatrix} b  \\  f \end{bmatrix}}
-\newcommand{\bfyv}   {\begin{bmatrix} b  \\  -f_y \end{bmatrix}}
-\newcommand{\xOv}   {\begin{bmatrix} x  \\  0\end{bmatrix}}
-\newcommand{\IPm}   {\left( I  -  P \right)}
-\newcommand{\OIm}   {\begin{bmatrix} 0  &  I\end{bmatrix}}
-\newcommand{\OImk}   {\begin{bmatrix} 0  &  I_k\end{bmatrix}}
-\newcommand{\ITM} {\sum_{i=1}^p \Abm^+_i \Abm_i}
-\newcommand{\ITMP} {\sum_{i=1}^p P_{\mathcal{R}(\Abm_i^T)}}
-\newcommand{\SMAbm} {\sum_{i=1}^p \Abm^+_i}
-
-\newcommand{\n}[1][1]{\vspace*{#1\baselineskip}\noindent}
-\newcommand{\ISD}[1]{\begin{center}\n[.4]\textcolor{red}{ISD\
- \hspace*{0.15em} \fbox{\parbox{.8\textwidth}{#1}}}\n[.4]\end{center}}
-\newcommand{\MZ}[1]{\begin{center}\n[.4]\textcolor{blue}{MZ\
-\hspace*{0.15em} \fbox{\parbox{.9\textwidth}{\texttt{#1}}}}\n[.4]\end{center}}
-
-\hyphenpenalty=10000
-\widowpenalty=10000
-\sloppy
-
-
-% Hyperlinks (required, but should be loaded last)
-\usepackage{ifpdf}
-\ifpdf
-  \usepackage[pdftex,pagebackref=true]{hyperref}
-\else
-  \usepackage[ps2pdf,pagebackref=true]{hyperref}
-\fi
-\hypersetup{%
-  colorlinks=true,%
-  linkcolor=blue,%
-  citecolor=blue,%
-  unicode%
-}
-
-% Custom commands
-\newcommand{\clearemptydoublepage}{%
-  \newpage{\pagestyle{empty}\cleardoublepage}%
-}
-
-
 
 \begin{document}
